--- a/ML.html
+++ b/ML.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Machine Learning Project</title>
+  <title>Python_predictive_modeling_project</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet"/>
   <style>
     * {
@@ -338,7 +338,7 @@
     </ul>
   </aside>
   <section class="catalog-section">
-    <h1>Machine Learning Project</h1>
+    <h1>Python_predictive_modeling_project</h1>
     <div class="card-grid">
       <!-- ✅ UPDATED ALLEXCEPT CARD WITH VIDEO -->
       
