--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
         <a href="powerbi.html">View Full Catalog</a>
       </article>
       <article class="card">
-        <h3>Python_predictive_modeling_project<br> Using Python</h3>
+        <h3>Python_predictive_modeling_project</h3>
         <p>develop a complete machine learning project in Python, from data handling to model deployment.</p>
         <a href="ML.html">View Full Catalog</a>
       </article>
@@ -398,4 +398,5 @@
 
 </body>
 </html>
+
 
