--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
     <section class="about-me">
       <h2>About This Website</h2>
       <p>
-        Hi! I'm Raheleh, passionate about all things data — from data analytics to data science and data engineering. 
+        Hi! I'm Raheleh, passionate about all things data — from data analytics to data engineering. 
         This website is my personal learning journey where I explore, experiment, and share everything I’m learning about working with data. 
         Whether it’s analyzing trends, building models, or designing data pipelines, I’m always excited to dive deeper and grow in this ever-evolving field.
         Feel free to explore and connect!       
@@ -398,5 +398,6 @@
 
 </body>
 </html>
+
 
 
