--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
       </article>
       <article class="card">
         <h3>Python for predictive modeling project</h3>
-        <p>develop a complete machine learning project in Python, from data handling to model deployment.</p>
+        <p>develop a complete predictive modeling project in Python, from data handling to model deployment.</p>
         <a href="ML.html">View Full Catalog</a>
       </article>
       <article class="card">
@@ -398,6 +398,7 @@
 
 </body>
 </html>
+
 
 
 
