--- a/AzureDataFactory.html
+++ b/AzureDataFactory.html
@@ -339,7 +339,7 @@
   </aside>
 
   <section class="catalog-section">
-    <h1>Adobe Campaign Classic</h1>
+    <h1>Azure Data Factory</h1>
     <div class="card-grid">
       <!-- ✅ UPDATED ALLEXCEPT CARD WITH VIDEO -->
       <div class="card">
@@ -617,3 +617,4 @@
 
 </body>
 </html>
+
