--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
 
 <header>
   <h1>DataCraft by Raheleh</h1>
-  <p>Curated learning & project examples </p>
+  <p>A portfolio of data analytics & engineering scenarios</p>
 </header>
 
 <div class="home-badge">
@@ -398,6 +398,7 @@
 
 </body>
 </html>
+
 
 
 
