--- a/index.html
+++ b/index.html
@@ -349,6 +349,11 @@
         <a href="ML.html">View Full Catalog</a>
       </article>
       <article class="card">
+        <h3>Microsoft Fabric</h3>
+        <p>Microsoft Fabric is an integrated platform for building and managing data-driven applications.</p>
+        <a href="Fabric.html">View Full Catalog</a>
+      </article>
+      <article class="card">
         <h3>Python for Data Analytics</h3>
         <p>Master Python basics and libraries like pandas, NumPy, and Matplotlib to analyze and visualize data.</p>
         <a href="PythonDataAnalyticVersion.html">View Full Catalog</a>
