--- a/AzureSynapse.html
+++ b/AzureSynapse.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Azure Data Factory</title>
+  <title>Azure Synapse Analytics</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet"/>
   <style>
     * {
@@ -339,7 +339,7 @@
   </aside>
 
   <section class="catalog-section">
-    <h1>Azure Data Factory</h1>
+    <h1>Azure Synapse Analytics</h1>
 <div class="card-grid">
       <!-- ✅ UPDATED ALLEXCEPT CARD WITH VIDEO -->
 <div class="card">
