--- a/index.html
+++ b/index.html
@@ -329,10 +329,10 @@
   <main class="content">
     <section class="about-me">
       <h2>About This Website</h2>
-      <p>Hi! I'm Raheleh, passionate about all things data — from data analytics to  data engineering. 
-        This website is my personal learning journey where I explore, experiment, and share everything I’m learning about working with data. 
-        Whether it’s analyzing trends, building models, or designing data pipelines, I’m always excited to dive deeper and grow in this ever-evolving field.
-        Feel free to explore and connect!
+      <p>Hi! I'm Raheleh — passionate about all things data, from analytics to engineering.
+This website is my portfolio, where I demo some of what I've been learning in the world of data.
+Whether it’s analyzing trends, building models, or designing data pipelines, I love exploring, experimenting, and growing in this ever-evolving field.
+Feel free to explore and connect!
                
       </p>
     </section>
@@ -415,3 +415,4 @@
 
 </body>
 </html>
+
