--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
     <section class="about-me">
       <h2>About This Website</h2>
       <p>Hi! I'm Raheleh — passionate about all things data, from analytics to engineering.
-This website is my portfolio, where I demo some of what I've been learning in the world of data.
+This website is my portfolio, where I share a small snapshot of what I’ve been learning in the world of data.
 Whether it’s analyzing trends, building models, or designing data pipelines, I love exploring, experimenting, and growing in this ever-evolving field.
 Feel free to explore and connect!
                
@@ -415,4 +415,5 @@ Feel free to explore and connect!
 
 </body>
 </html>
+
 
