--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
   <main class="content">
     <section class="about-me">
       <h2>About This Website</h2>
-      <p>Hi! I'm Raheleh — passionate about all things data, from analytics to engineering.
+      <p>Hi! I'm Raheleh , passionate about all things data, from analytics to engineering.
 This website is my portfolio, where I share a small snapshot of what I’ve been learning in the world of data.
 Whether it’s analyzing trends, building models, or designing data pipelines, I love exploring, experimenting, and growing in this ever-evolving field.
 Feel free to explore and connect!
@@ -344,7 +344,7 @@ Feel free to explore and connect!
         <a href="powerbi.html">View Full Catalog</a>
       </article>
       <article class="card">
-        <h3>Python for predictive modeling project</h3>
+        <h3>Python for predictive modeling </h3>
         <p>develop a complete predictive modeling project in Python, from data handling to model deployment.</p>
         <a href="ML.html">View Full Catalog</a>
       </article>
@@ -414,6 +414,7 @@ Feel free to explore and connect!
 
 </body>
 </html>
+
 
 
 
