--- a/ML.html
+++ b/ML.html
@@ -344,7 +344,7 @@
       
       <div class="card">
   <h3>GitHub and Code Setup</h3>
-  <p>GitHub is a platform for version control and collaboration, while VS Code is a code editor where you can set up your Python environment to develop, run, and manage your machine learning project efficiently.</p>
+  <p>GitHub is a platform for version control and collaboration, while VS Code is a code editor where you can set up your Python environment to develop, run, and manage your project efficiently.</p>
   <div style="position: relative; width: 100%; border-radius: 8px; overflow: hidden; margin-top: 16px; padding-top: 56.25%;">
     <iframe 
       src="https://www.youtube.com/embed/D1YtoJIUrMs?list=PLJO2pLd2CEDzzb998XhEb9hDVaV1iieHB&index=4" 
@@ -359,7 +359,7 @@
 
       <div class="card">
   <h3>Logging and Exception Handling</h3>
-  <p>Dive into logging and exception handling in Python to make your machine learning projects more robust and easier to debug.</p>
+  <p>Dive into logging and exception handling in Python to make your projects more robust and easier to debug.</p>
   <div style="position: relative; width: 100%; border-radius: 8px; overflow: hidden; margin-top: 16px; padding-top: 56.25%;">
     <iframe 
       src="https://www.youtube.com/embed/Ky0Fsl4TW3A?list=PLJO2pLd2CEDzzb998XhEb9hDVaV1iieHB&index=3" 
@@ -374,7 +374,7 @@
 
 <div class="card">
   <h3>Data Ingestion</h3>
-  <p>Collect, validate, and store raw data efficiently as the first step in a machine learning pipeline.</p>
+  <p>Collect, validate, and store raw data efficiently as the first step in a pipeline.</p>
   <div style="position: relative; width: 100%; border-radius: 8px; overflow: hidden; margin-top: 16px; padding-top: 56.25%;">
     <iframe 
       src="https://www.youtube.com/embed/qLioW9eH6EI?list=PLJO2pLd2CEDzzb998XhEb9hDVaV1iieHB&index=4" 
@@ -466,3 +466,4 @@
 
 </body>
 </html>
+
