--- a/ML.html
+++ b/ML.html
@@ -416,7 +416,7 @@
       </div>
        <div class="card">
          <h3><!-- <span class="material-icons">analytics</span> --> Deploy In Azure</h3>
-          <p>Deploy ML Project in Azuure Cloud using GitHub Action.</p>
+          <p>Deploy the Project in Azuure Cloud using GitHub Action.</p>
         <div style="position: relative; width: 100%; border-radius: 8px; overflow: hidden; margin-top: 16px;">
          
           <video controls style="width: 100%; height: auto;">
@@ -466,4 +466,5 @@
 
 </body>
 </html>
+
 
